--- a/response.html
+++ b/response.html
@@ -3,14 +3,14 @@ X-Frame-Options: SAMEORIGIN
 X-Xss-Protection: 1; mode=block
 X-Content-Type-Options: nosniff
 Content-Type: application/json; charset=utf-8
-Etag: W/"f504bc6218199e0a7179cccaef19d38a"
+Etag: W/"323f2961b888b97d996a45b4aeb0f37a"
 Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: 376c4dc7-b021-489a-ba34-f55ce4e7973f
-X-Runtime: 0.137419
+X-Request-Id: 0524f510-0ddc-4a36-85ad-611f9703a743
+X-Runtime: 0.424906
 Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
-Date: Wed, 22 Apr 2015 09:58:22 GMT
-Content-Length: 16
+Date: Thu, 23 Apr 2015 12:08:26 GMT
+Content-Length: 237
 Connection: Keep-Alive
 Set-Cookie: request_method=POST; path=/
 
-Project created!
+[{"id":1,"name":"Goaldigger","description":null,"items":[{"id":2,"name":"Testing testing","done":null},{"id":3,"name":"Test2","done":null}],"milestones":[{"id":1,"name":"Backend","items":[{"id":1,"name":"Research rails","done":null}]}]}]
