--- a/response.html
+++ b/response.html
@@ -1,16 +1,17 @@
 HTTP/1.1 200 OK 
+Connection: keep-alive
 X-Frame-Options: SAMEORIGIN
 X-Xss-Protection: 1; mode=block
 X-Content-Type-Options: nosniff
 Content-Type: application/json; charset=utf-8
-Etag: W/"323f2961b888b97d996a45b4aeb0f37a"
+Etag: W/"19af2f6c5aff0da409b0c6b3471b3c5a"
 Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: 0524f510-0ddc-4a36-85ad-611f9703a743
-X-Runtime: 0.424906
-Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
-Date: Thu, 23 Apr 2015 12:08:26 GMT
-Content-Length: 237
-Connection: Keep-Alive
+X-Request-Id: fbfef779-28bd-4c20-8ffe-b91d84a1c5b8
+X-Runtime: 0.126258
+Server: WEBrick/1.3.1 (Ruby/2.0.0/2015-04-13)
+Date: Thu, 23 Apr 2015 12:12:28 GMT
+Content-Length: 368
 Set-Cookie: request_method=POST; path=/
+Via: 1.1 vegur
 
-[{"id":1,"name":"Goaldigger","description":null,"items":[{"id":2,"name":"Testing testing","done":null},{"id":3,"name":"Test2","done":null}],"milestones":[{"id":1,"name":"Backend","items":[{"id":1,"name":"Research rails","done":null}]}]}]
+[{"id":15,"name":"goaldigger","description":null,"items":[],"milestones":[]},{"id":16,"name":"goaldigger","description":null,"items":[],"milestones":[]},{"id":17,"name":"hej","description":null,"items":[],"milestones":[]},{"id":18,"name":"coaldigger","description":null,"items":[],"milestones":[]},{"id":19,"name":"Test","description":null,"items":[],"milestones":[]}]
