Fix toggle_item done func

--- a/response.html
+++ b/response.html
@@ -1,17 +1,16 @@
 HTTP/1.1 200 OK 
-Connection: keep-alive
 X-Frame-Options: SAMEORIGIN
 X-Xss-Protection: 1; mode=block
 X-Content-Type-Options: nosniff
 Content-Type: application/json; charset=utf-8
-Etag: W/"19af2f6c5aff0da409b0c6b3471b3c5a"
+Etag: W/"0a70a2ce2fb105c5f2dad5fcb00788d9"
 Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: fbfef779-28bd-4c20-8ffe-b91d84a1c5b8
-X-Runtime: 0.126258
-Server: WEBrick/1.3.1 (Ruby/2.0.0/2015-04-13)
-Date: Thu, 23 Apr 2015 12:12:28 GMT
-Content-Length: 368
+X-Request-Id: 01011156-1ed7-4567-b71f-50277d9101f2
+X-Runtime: 0.138662
+Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
+Date: Mon, 27 Apr 2015 10:01:09 GMT
+Content-Length: 12
+Connection: Keep-Alive
 Set-Cookie: request_method=POST; path=/
-Via: 1.1 vegur
 
-[{"id":15,"name":"goaldigger","description":null,"items":[],"milestones":[]},{"id":16,"name":"goaldigger","description":null,"items":[],"milestones":[]},{"id":17,"name":"hej","description":null,"items":[],"milestones":[]},{"id":18,"name":"coaldigger","description":null,"items":[],"milestones":[]},{"id":19,"name":"Test","description":null,"items":[],"milestones":[]}]
+"Done: true"
