--- a/response.html
+++ b/response.html
@@ -1,16 +1,11 @@
-HTTP/1.1 200 OK 
-X-Frame-Options: SAMEORIGIN
-X-Xss-Protection: 1; mode=block
-X-Content-Type-Options: nosniff
+HTTP/1.1 404 Not Found 
+Connection: keep-alive
 Content-Type: application/json; charset=utf-8
-Etag: W/"0a70a2ce2fb105c5f2dad5fcb00788d9"
-Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: 01011156-1ed7-4567-b71f-50277d9101f2
-X-Runtime: 0.138662
-Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
-Date: Mon, 27 Apr 2015 10:01:09 GMT
-Content-Length: 12
-Connection: Keep-Alive
-Set-Cookie: request_method=POST; path=/
+Content-Length: 36
+X-Request-Id: 76d1ca1b-95a1-4903-ac12-b3afba7b0598
+X-Runtime: 0.105384
+Server: WEBrick/1.3.1 (Ruby/2.0.0/2015-04-13)
+Date: Mon, 27 Apr 2015 10:06:33 GMT
+Via: 1.1 vegur
 
-"Done: true"
+{"status":"404","error":"Not Found"}
