Add mailer. Add figaro. Refactor respond_to

--- a/response.html
+++ b/response.html
@@ -1,11 +1,16 @@
-HTTP/1.1 404 Not Found 
-Connection: keep-alive
+HTTP/1.1 200 OK 
+X-Frame-Options: SAMEORIGIN
+X-Xss-Protection: 1; mode=block
+X-Content-Type-Options: nosniff
 Content-Type: application/json; charset=utf-8
-Content-Length: 36
-X-Request-Id: 76d1ca1b-95a1-4903-ac12-b3afba7b0598
-X-Runtime: 0.105384
-Server: WEBrick/1.3.1 (Ruby/2.0.0/2015-04-13)
-Date: Mon, 27 Apr 2015 10:06:33 GMT
-Via: 1.1 vegur
+Etag: W/"6428a7c9632c3e7e0851d1b1b9bbbcc2"
+Cache-Control: max-age=0, private, must-revalidate
+X-Request-Id: 6f86ffbd-5330-4f6b-9c1f-a9b924d55b73
+X-Runtime: 2.231293
+Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
+Date: Tue, 28 Apr 2015 10:35:39 GMT
+Content-Length: 73
+Connection: Keep-Alive
+Set-Cookie: request_method=POST; path=/
 
-{"status":"404","error":"Not Found"}
+{"success":true,"message":"Password sent to email: persson_dunk@msn.com"}
