--- a/response.html
+++ b/response.html
@@ -1,16 +1,24 @@
-HTTP/1.1 200 OK 
-X-Frame-Options: SAMEORIGIN
-X-Xss-Protection: 1; mode=block
-X-Content-Type-Options: nosniff
-Content-Type: application/json; charset=utf-8
-Etag: W/"6428a7c9632c3e7e0851d1b1b9bbbcc2"
-Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: 6f86ffbd-5330-4f6b-9c1f-a9b924d55b73
-X-Runtime: 2.231293
-Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
-Date: Tue, 28 Apr 2015 10:35:39 GMT
-Content-Length: 73
-Connection: Keep-Alive
-Set-Cookie: request_method=POST; path=/
+HTTP/1.1 503 Service Unavailable
+Connection: keep-alive
+Server: Cowboy
+Date: Tue, 28 Apr 2015 13:59:50 GMT
+Content-Length: 484
+Content-Type: text/html; charset=utf-8
+Cache-Control: no-cache, no-store
 
-{"success":true,"message":"Password sent to email: persson_dunk@msn.com"}
+<!DOCTYPE html>
+    <html>
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style type="text/css">
+        html, body, iframe { margin: 0; padding: 0; height: 100%; }
+        iframe { display: block; width: 100%; border: none; }
+      </style>
+    <title>Application Error</title>
+    </head>
+    <body>
+      <iframe src="//s3.amazonaws.com/heroku_pages/error.html">
+        <p>Application Error</p>
+      </iframe>
+    </body>
+    </html>
