--- a/response.html
+++ b/response.html
@@ -3,14 +3,14 @@ X-Frame-Options: SAMEORIGIN
 X-Xss-Protection: 1; mode=block
 X-Content-Type-Options: nosniff
 Content-Type: application/json; charset=utf-8
-Etag: W/"8fee38006c0489ba59ad5ccda8d428e0"
+Etag: W/"27a6e84fea1d93005c490156dc9845ef"
 Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: f28f49ac-9124-4904-90f1-9d39c3142742
-X-Runtime: 0.059206
+X-Request-Id: 75b788c6-44ac-4998-978b-310e166bb9d1
+X-Runtime: 0.156557
 Server: WEBrick/1.3.1 (Ruby/2.1.2/2014-05-08)
-Date: Wed, 29 Apr 2015 13:15:45 GMT
-Content-Length: 105
+Date: Wed, 06 May 2015 11:40:58 GMT
+Content-Length: 57
 Connection: Keep-Alive
 Set-Cookie: request_method=POST; path=/
 
-[{"name":"Jerry","email":"j","id":null},{"name":"Jerry","email":"jerry.ck.pedersen@gmail.com","id":null}]
+[{"id":2,"name":"Marten","email":"persson_dunk@msn.com"}]
